# armada

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmark-arm.yml  benchmark-real-arm.yml
configs/: default.yaml  instances.yaml  models.yaml
scripts/: build_llama_cpp.sh  download_model.sh
src/armada/: __init__.py  agent.py  cli.py  client.py  compare.py  config.py  cpuinfo.py  metrics.py  report.py  runner.py  server.py  tasks.py  tools.py
tests/: test_config.py  test_metrics.py  test_report.py  test_runner.py  test_sweep.py  test_tasks.py  test_tools.py
